--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,67 @@
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual Environment
+venv/
+env/
+ENV/
+.venv
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Environment variables
+.env
+.env.local
+.env.*.local
+
+# OS
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# Logs
+*.log
+logs/*.log
+
+# Test results
+*.json
+!package.json
+!package-lock.json
+test_results*.txt
+test_results*.json
+
+# Claude/Agent results
+.agent-results/
+.claude/
+
+# Temporary files
+*.tmp
+*.bak
+*.cache
+
 ui_integration/__pycache__/
+
