feat: Build traditional food DB and test MFDS API integration

--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,8 @@ debug_iherb.png
 debug_axios.html
 # Streamlit secrets
 .streamlit/secrets.toml
+
+# Data files
+data/
+*.csv
+!products_master.csv
