--- a/.streamlit/secrets.toml.example
+++ b/.streamlit/secrets.toml.example
@@ -7,9 +7,12 @@
 # 3. secrets.toml은 .gitignore에 포함되어 있어 Git에 커밋되지 않습니다.
 
 # Supabase 설정
-SUPABASE_URL = "https://your-project.supabase.co"
-SUPABASE_ANON_KEY = "your-supabase-anon-key-here"
-SUPABASE_SERVICE_ROLE_KEY = "your-supabase-service-role-key-here"
+# Supabase 프로젝트 설정에서 URL과 키를 가져오세요
+# https://supabase.com/dashboard/project/YOUR_PROJECT/settings/api
+
+SUPABASE_URL = "https://bvowxbpqtfpkkxkzsumf.supabase.co"
+SUPABASE_ANON_KEY = "sb_publishable_afWmzo_2ypv3liBdpCkJjg_KjS7nqE2"
+# SUPABASE_SERVICE_ROLE_KEY = "your-supabase-service-role-key-here"
 
 # Anthropic Claude API 설정
 ANTHROPIC_API_KEY = "your-anthropic-api-key-here"
