--- a/.gitignore
+++ b/.gitignore
@@ -56,12 +56,8 @@ package-lock.json
 *.json
 !package.json
 !package-lock.json
-data/
-
-# Streamlit
-.streamlit/secrets.toml
-
-# Temporary files
+data/# Streamlit
+.streamlit/secrets.toml# Temporary files
 *.tmp
 *.bak
 *.cache
