--- a/ui_integration/requirements.txt
+++ b/ui_integration/requirements.txt
@@ -3,3 +3,7 @@ plotly>=5.18.0
 pandas>=2.1.0
 requests>=2.31.0
 python-dotenv>=1.0.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+pydantic>=2.5.0
+anthropic>=0.18.0
