feat: OpenAPI ?쒕쾭 諛?AI 李⑦듃 遺꾩꽍 湲곕뒫 異붽?
- FastAPI 湲곕컲 OpenAPI ?쒕쾭 援ъ텞
  - 由щ럭 遺꾩꽍, ?쒗뭹 議고쉶, 李⑦듃 遺꾩꽍 API ?붾뱶?ъ씤??  - OpenAPI ?먮룞 臾몄꽌??(/docs)

- AI 李⑦듃 遺꾩꽍湲?紐⑤뱢 援ы쁽
  - ChartAnalyzer ?대옒?ㅻ줈 李⑦듃 ?곗씠??AI 遺꾩꽍
  - ?쒗뭹 鍮꾧탳 諛??좊ː??遺꾪룷 遺꾩꽍 湲곕뒫

- Database ?ㅽ궎留?AI 遺꾩꽍湲?異붽?
  - SQL ?ㅽ궎留??먮룞 遺꾩꽍 諛?臾몄꽌??
- UI ?듯빀: 李⑦듃 ?뚮뜑留???AI 遺꾩꽍 湲곕뒫 ?먮룞 ?쒓났

- ?섍꼍 蹂???ㅼ젙 ?뚯씪 諛?媛?대뱶 異붽?
  - .env.example, .gitignore
  - API_KEY_SETUP.md, ENV_SETUP_GUIDE.md, QUICK_START.md
  - setup_env.py ?ㅼ젙 ?꾩슦誘??ㅽ겕由쏀듃

- ?섏〈???낅뜲?댄듃 (fastapi, uvicorn, pydantic, anthropic)

--- a/.gitignore
+++ b/.gitignore
@@ -49,9 +49,7 @@ logs/*.log
 
 # Node.js
 node_modules/
-package-lock.json
-
-# Data files
+package-lock.json# Data files
 *.csv
 *.json
 !package.json
